[tool.poetry]
name = "pti"
version = "0.1.0"
description = ""
authors = ["Ayal Regev <ayal@redefine.dev>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "pti"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.982"
pytest-asyncio = "^0.20.1"
docker = "^6.0.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
